--- a/Contributors.html
+++ b/Contributors.html
@@ -101,7 +101,7 @@
         <a class="box-item" href="https://github.com/Amitava123">Amita Mitra</a>
 	      <a class="box-item" href="https://github.com/philson-philip">Philson Philip</a>
 
-
+        <a class="box-item" href="https://github.com/shradha-khapra">Shradha Khapra</a>
 
 
 
