--- a/Contributors.html
+++ b/Contributors.html
@@ -100,6 +100,7 @@
 		  <a class="box-item" href="https://github.com/fineanmol">Anmol Agarwal</a>
         <a class="box-item" href="https://github.com/Amitava123">Amita Mitra</a>
 	      <a class="box-item" href="https://github.com/philson-philip">Philson Philip</a>
+	      <a class="box-item"> href="https://github.com/SHIV1003">shivam goyal</a>
 
 
 
@@ -146,5 +147,4 @@
 
   <script src="./scripts/menu.js"></script>
 </body>
-
 </html>
