--- a/Contributors.html
+++ b/Contributors.html
@@ -100,7 +100,7 @@
 		  <a class="box-item" href="https://github.com/fineanmol">Anmol Agarwal</a>
         <a class="box-item" href="https://github.com/Amitava123">Amita Mitra</a>
 	      <a class="box-item" href="https://github.com/philson-philip">Philson Philip</a>
-	      <a class="box-item"> href="https://github.com/SHIV1003">Shivam Goyal</a>
+	      <a class="box-item" href="https://github.com/SHIV1003"> Shivam Goyal</a>
 
 
 
