--- a/Contributors.html
+++ b/Contributors.html
@@ -98,7 +98,7 @@
 
 	      <!-- Add to the bottom of the list -->
 		<a class="box-item" href="https://github.com/fineanmol">Anmol Agarwal</a>
-		<a class="box-item" href="https://github.com/Amitava123">Amita Mitra</a>
+		<a class="box-item" href="https://github.com/Amitava123">Amitava Mitra</a>
 		<a class="box-item" href="https://github.com/philson-philip">Philson Philip</a>
 		<a class="box-item" href="https://github.com/SHIV1003"> Shivam Goyal</a>
 		<a class="box-item" href="https://github.com/shradha-khapra">Shradha Khapra</a>
