--- a/Contributors.html
+++ b/Contributors.html
@@ -102,6 +102,7 @@
 		<a class="box-item" href="https://github.com/philson-philip">Philson Philip</a>
 		<a class="box-item" href="https://github.com/SHIV1003"> Shivam Goyal</a>
 		<a class="box-item" href="https://github.com/shradha-khapra">Shradha Khapra</a>
+		<a class="box-item" href="https://github.com/ritesh2905">Ritesh Kumar</a>
 
 
 
