Add span for text in link

--- a/Contributors.html
+++ b/Contributors.html
@@ -97,21 +97,22 @@
 
 
 	      <!-- Add to the bottom of the list -->
-		<a class="box-item" href="https://github.com/fineanmol">Anmol Agarwal</a>
-		<a class="box-item" href="https://github.com/Amitava123">Amitava Mitra</a>
-		<a class="box-item" href="https://github.com/philson-philip">Philson Philip</a>
-		<a class="box-item" href="https://github.com/SHIV1003"> Shivam Goyal</a>
-		<a class="box-item" href="https://github.com/shradha-khapra">Shradha Khapra</a>
-		<a class="box-item" href="https://github.com/ritesh2905">Ritesh Kumar</a>
+		<a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+		<a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
+		<a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
+		<a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
+		<a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
+		<a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
+		<a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
 
 
 
 
-        
-       
+
+
         <!--
         Add here
-        format : <a class="box-item"> href="https://github.com/<your-username>">Your Name</a>
+        format : <a class="box-item"> href="https://github.com/<your-username>"><span>Your Name</span></a>
         -->
 
 
