--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
       <p class="animated rubberBand delay-4s">Add yourself to the list if you contribute.</p>
       <div class="box mx-auto">
 	      <!-- Add to the bottom of the list -->
-		  <a class="box-item" href="https://github.com/fineanmol">Anmol Agarwal</a>
-        <a class="box-item" href="https://github.com/Amitava123">Amitava Mitra</a>
-	      <a class="box-item" href="https://github.com/philson-philip">Philson Philip</a>
-        <a class="box-item" href="https://github.com/shradha-khapra">Shradha Khapra</a>
-        
-       
+		  <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+        <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
+	      <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
+        <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
+
+
         <!--
         Add here
-        format : <a class="box-item"> href="https://github.com/<your-username>">Your Name</a>
+        format : <a class="box-item"> href="https://github.com/<your-username>"><span>Your Name</span></a>
         -->
       </div>
     </div>
