--- a/Contributors.html
+++ b/Contributors.html
@@ -107,8 +107,9 @@
 		<a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
 	    	<a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
 	    	<a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
+		<a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
 
-
+		
 		
 
 
