--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 	      <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
         <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
 
+        <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
+
 
         <!--
         Add here
