--- a/Contributors.html
+++ b/Contributors.html
@@ -108,6 +108,7 @@
 	    	<a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
 	    	<a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
 		<a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
+		<a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
 
 		
 		
