Updated a Contributor Profile"

--- a/Contributors.html
+++ b/Contributors.html
@@ -111,6 +111,7 @@
 		<a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
 	    	<a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>
 	      	<a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
+	    <a class="box-item" href="https://github.com/manigedit"></a><span>Manish Kumar</span>
 
 		
 		
