--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
 
         <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
+        <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
 
 
         <!--
