Added my profile

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         Add here
         format : <a class="box-item"> href="https://github.com/<your-username>"><span>Your Name</span></a>
         -->
+        <a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
+
       </div>
     </div>
   </div>
