--- a/index.html
+++ b/index.html
@@ -93,11 +93,20 @@
       <div class="box mx-auto">
 	      <!-- Add to the bottom of the list -->
 		  <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
-        <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
-	      <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
-        <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
-
-        <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
+		<a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
+		<a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
+		<a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
+		<a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
+		<a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
+		<a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
+	    	<a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
+	    	<a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
+		<a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
+		<a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
+	    	<a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
+	      	<a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
+	    	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
+             
 
 
         <!--
