--- a/trylearnhowtoprogram.html
+++ b/trylearnhowtoprogram.html
@@ -29,27 +29,8 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active"> <a class="nav-link" href="/">Home</a> </li>
         <li class="nav-item"> <a class="nav-link" href="./helpful-material.html">Helpful Material</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="./contributors.html">Contributors</a> </li>
-        <li class="dropdown drop">
-          <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others
-            <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li class="nav-item"> <a class="nav-link-drop" href="https://cultofthepartyparrot.com/">PARROTS?!</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" id="twist" href="#">The twist</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./potato.html">Potato</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./cheese.html">Cheese!</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" id="learn" href="/Fireworks">Fireworks</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./wow.html">Learn!</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" id="tools" href="./tools.html">Tools</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./gifheaven.html">Gif heaven!</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./trylearnhowtoprogram.html">Program for newcomers to
-                learn!</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./values.html">Values</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./snek.html">SNEK!</a> </li>
-            <li class="nav-item"> <a class="nav-link-drop" href="./canoi.html">Canoi</a> </li>
-            <li class="nav-item ml-lg-auto"> <a class="nav-link-drop" id="invert-btn" href="#">Invert</a> </li>
-          </ul>
-        </li>
+        <li class="nav-item"> <a class="nav-link" href="https://fineanmol.github.io/Hacktoberfest2k18/Contributors.html"> Contributors </a> </li>
+        
       </ul>
     </div>
   </nav>
@@ -69,11 +50,11 @@
             practically,
             discover they can't, and go back to review those same tutorials (or slightly different ones that cover the
             same material).
-            You don't have to get caught in the cycle! If you use <a href="https://www.learnhowtoprogram.com">this</a>
+            You don't have to get caught in the cycle! If you use <a href="#">this</a>
             great resource,
             you'll be challeneged every day you practice, and that challenege will translate into practical skills!
           </p>
-          <p><a href="https://www.learnhowtoprogram.com">Learn how to program</a> is a website that hosts the
+          <p><a href="#">Learn how to program</a> is a website that hosts the
             curriculum
             of the coding
             bootcamp Epicodus. That's right--<em>the entire program is hosted online</em>. You can complete it at your
@@ -87,7 +68,7 @@
             I've just been having such a great time using their materials that I have to share it with anyone that'll
             listen.
           </p>
-          <p>Don't think it'll work? Checkout some of these projects that I've completed in my month of using <a href="https://www.learnhowtoprogram.com">Learn
+          <p>Don't think it'll work? Checkout some of these projects that I've completed in my month of using <a href="#">Learn
               how to program</a>.
           </p>
           <p><small>Also, I'm not very smart or very good at this. Think of what <em>you</em> could achieve if you gave
