--- a/Contributors.html
+++ b/Contributors.html
@@ -112,7 +112,7 @@
 	    	<a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
 	      	<a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
 
-	    <a class="box-item" href="https://github.com/manigedit"></a><span>Manish Kumar</span>
+	    <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
 
 
 	    	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
