--- a/Contributors.html
+++ b/Contributors.html
@@ -105,18 +105,15 @@
 		<a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
 		<a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
 		<a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
-	    	<a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
-	    	<a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
+	  <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
+	  <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
 		<a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
 		<a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
-	    	<a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
-	      	<a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
-
-	    <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
-
-
-	    	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
-             
+	  <a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
+	  <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
+    <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
+  	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
+    <a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a>             
 
 		
 
