--- a/Contributors.html
+++ b/Contributors.html
@@ -113,7 +113,9 @@
 	  <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
     <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
   	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
-    <a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a>             
+    <a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a> 
+	      <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>             
+
 
 		
 
