--- a/Contributors.html
+++ b/Contributors.html
@@ -115,7 +115,7 @@
   	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
     <a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a> 
 	      <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>             
-
+              <a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a> 
 
 		
 
