--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <p class="animated rubberBand delay-4s">Add yourself to the list if you contribute.</p>
       <div class="box mx-auto">
 	      <!-- Add to the bottom of the list -->
-		  <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+		<a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
 		<a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
 		<a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
 		<a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
@@ -106,7 +106,8 @@
 	    	<a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
 	      	<a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
 	    	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
-      <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
+      		<a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
+	      	<a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
 
 
 
