--- a/Contributors.html
+++ b/Contributors.html
@@ -116,6 +116,7 @@
     <a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a> 
 	      <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>             
               <a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a> 
+	      <a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
 
 		
 
