--- a/Contributors.html
+++ b/Contributors.html
@@ -117,6 +117,7 @@
 	      <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>             
               <a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a> 
 	      <a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
+        <a class="box-item" href="https://github.com/hidalgob"><span>Bruno Hidalgo</span></a>
 
 		
 
