added buttons for color game

--- a/colorgame.html
+++ b/colorgame.html
@@ -25,6 +25,16 @@
     <div class="square"></div>
     <div class="square"></div>
   </div>
+
+
+
+  <div class="container-bottom flex ">
+    <div class="item flex-item-1">Start</div>
+    <div class="item flex-item-1">Stop</div>
+    <div class="item flex-item-1">Retry</div>
+  </div>
+
+
   <script type="text/javascript" src="scripts/colorgame.js">
   </script>
 </body>
