added back to index link

--- a/colorgame.html
+++ b/colorgame.html
@@ -10,6 +10,8 @@
 <body>
   <h1>Color Game <br> <span id="colorDisplay"></span></h1>
   <div id="stripe">
+    <a id="back-to-index" type="button" name="button" href="./index.html"><span>Back to Index</span></a>
+    <span id="message"></span>
     <button id="reset" type="button" name="button">New Colors</button>
     <span id="message"></span>
     <button id="easyBtn" type="button" name="button">Easy</button>
