changed div's into proper semantics

--- a/colorgame.html
+++ b/colorgame.html
@@ -8,33 +8,34 @@
 </head>
 
 <body>
+  <section>
   <h1>Color Game <br> <span id="colorDisplay"></span></h1>
-  <div id="stripe">
+  <nav id="stripe">
     <a id="back-to-index" type="button" name="button" href="./index.html"><span>Back to Index</span></a>
     <span id="message"></span>
     <button id="reset" type="button" name="button">New Colors</button>
     <span id="message"></span>
     <button id="easyBtn" type="button" name="button">Easy</button>
     <button id="hardBtn" class="selected" type="button" name="button">Hard</button>
+  </nav>
+  </section>
 
-  </div>
-
-  <div class="container">
+  <section class="container">
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
-  </div>
+  </section>
 
 
 
-  <div class="container-bottom flex ">
+  <section class="container-bottom flex ">
     <div class="item flex-item-1">Start</div>
     <div class="item flex-item-1">Stop</div>
     <div class="item flex-item-1">Retry</div>
-  </div>
+  </section>
 
 
   <script type="text/javascript" src="scripts/colorgame.js">
