--- a/Contributors.html
+++ b/Contributors.html
@@ -123,10 +123,10 @@
 	      <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>             
               <a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a> 
 	      <a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
-
 	         <a class="box-item" href="https://github.com/ShagiG"><span>ShagiGanesh</span></a>
-
         <a class="box-item" href="https://github.com/hidalgob"><span>Bruno Hidalgo</span></a>
+	      <a class="box-item" href="https://github.com/cee-elle"><span>Cindy Le</span></a>
+	      <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a>
 
 
 		
