--- a/Contributors.html
+++ b/Contributors.html
@@ -127,6 +127,7 @@
         <a class="box-item" href="https://github.com/hidalgob"><span>Bruno Hidalgo</span></a>
 	      <a class="box-item" href="https://github.com/cee-elle"><span>Cindy Le</span></a>
 	      <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a>
+    <a class="box-item" href="https://github.com/dimitrisz123"><span>Jim Zervas</span></a>
 
 
 		
