--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 	    	<a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
         <a class="box-item"> href="https://github.com/aortizoj15"><span>Alexis Ortiz Ojeda</span></a>
 	      <a class="box-item" href="https://github.com/<Starfire1853"> "><span>Lynn Nguyen</span></a> 
+	        <a class="box-item" href="https://github.com/<vatsal146"> "><span>Vatsal Patel</span></a> 
 
 
         <!--
