--- a/Contributors.html
+++ b/Contributors.html
@@ -128,6 +128,7 @@
 <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a>
 <a class="box-item" href="https://github.com/dimitrisz123"><span>Jim Zervas</span></a>
 <a class="box-item" href="https://github.com/proghead00"><span>Susnata Goswami</span></a>
+<a class="box-item" href="https://github.com/gayathribuddhika"><span>Gayathri Buddhika</span></a>
 
 		
 <!--
