corrected code in index.html

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 	    	<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
       	<a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
 	    	<a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
-        <a class="box-item"> href="https://github.com/aortizoj15"><span>Alexis Ortiz Ojeda</span></a>
-	      <a class="box-item" href="https://github.com/<Starfire1853"> "><span>Lynn Nguyen</span></a> 
+        <a class="box-item" href="https://github.com/aortizoj15"><span>Alexis Ortiz Ojeda</span></a>
+	      <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a> 
 
 
         <!--
