activated stats which was not working before in index.html and contributor.html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
     <script src="/scripts/scroll.js"></script>
 
   <script src="./scripts/menu.js"></script>
+  <div class="container">
+    <div id="stats" style="margin-top: 1rem;"></div>
+  </div>
 </body>
 
 </html>
