--- a/Contributors.html
+++ b/Contributors.html
@@ -171,5 +171,8 @@
 <script src="/scripts/scroll.js"></script>
 
 <script src="./scripts/menu.js"></script>
+<div class="container">
+  <div id="stats" style="margin-top: 1rem;"></div>
+</div>
 </body>
 </html>
