--- a/Contributors.html
+++ b/Contributors.html
@@ -129,6 +129,7 @@
 <a class="box-item" href="https://github.com/dimitrisz123"><span>Jim Zervas</span></a>
 <a class="box-item" href="https://github.com/proghead00"><span>Susnata Goswami</span></a>
 <a class="box-item" href="https://github.com/gayathribuddhika"><span>Gayathri Buddhika</span></a>
+<a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
 
 		
 <!--
