--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         <a class="box-item" href="https://github.com/aortizoj15"><span>Alexis Ortiz Ojeda</span></a>
 	      <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a> 
         <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
+        <a class="box-item" href="https://github.com/sahmura"><span>Khoerul Umam</span></a>
 
         <!--
         Add here
