added myself in contributors list

--- a/Contributors.html
+++ b/Contributors.html
@@ -130,6 +130,7 @@
 <a class="box-item" href="https://github.com/proghead00"><span>Susnata Goswami</span></a>
 <a class="box-item" href="https://github.com/gayathribuddhika"><span>Gayathri Buddhika</span></a>
 <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
+<a class="box-item" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
 
 		
 <!--
