--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 	      <a class="box-item" target="_blank" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a> 
         <a class="box-item" target="_blank" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
         <a class="box-item" target="_blank" href="https://github.com/helangeline"><span>Angeline Budinata</span></a>
+        <a class="box-item" target="_blank" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
 
         <!--
         Add here
