Added huddman coding

--- a/Contributors.html
+++ b/Contributors.html
@@ -132,6 +132,7 @@
 <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
 <a class="box-item" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
 <a class="box-item" href="https://github.com/milos5593"><span>Milos Vujinic</span></a>
+<a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
 		
 <!--
         Add here
