--- a/Contributors.html
+++ b/Contributors.html
@@ -133,7 +133,8 @@
 <a class="box-item" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
 <a class="box-item" href="https://github.com/milos5593"><span>Milos Vujinic</span></a>
 <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
-<a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>		
+<a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
+<a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>		
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
