--- a/Contributors.html
+++ b/Contributors.html
@@ -134,7 +134,8 @@
 <a class="box-item" href="https://github.com/milos5593"><span>Milos Vujinic</span></a>
 <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
 <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
-<a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>		
+<a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
+<a class="box-item" href="https://github.com/<Sauvic016>"><span>Sauvic P Choudhury </span></a>	      
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
