--- a/Contributors.html
+++ b/Contributors.html
@@ -136,7 +136,8 @@
 <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
 <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
 <a class="box-item" href="https://github.com/<Sauvic016>"><span>Sauvic P Choudhury </span></a>
-<a class="box-item" href="https://github.com/<panchadeep>"><span>Panchadeep Mazumder</span></a>	      
+<a class="box-item" href="https://github.com/<panchadeep>"><span>Panchadeep Mazumder</span></a>
+<a class="box-item" href="https://github.com/savarbhasin>"><span>Savar Bhasin</span></a>
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
