--- a/Contributors.html
+++ b/Contributors.html
@@ -138,6 +138,8 @@
 <a class="box-item" href="https://github.com/<Sauvic016>"><span>Sauvic P Choudhury </span></a>
 <a class="box-item" href="https://github.com/<panchadeep>"><span>Panchadeep Mazumder</span></a>
 <a class="box-item" href="https://github.com/savarbhasin>"><span>Savar Bhasin</span></a>
+<a class="box-item" href="https://github.com/nitin-jain3"><span>NITIN JAIN</span></a>
+
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
