--- a/Contributors.html
+++ b/Contributors.html
@@ -140,7 +140,7 @@
 <a class="box-item" href="https://github.com/<panchadeep>"><span>Panchadeep Mazumder</span></a>
 <a class="box-item" href="https://github.com/savarbhasin>"><span>Savar Bhasin</span></a>
 <a class="box-item" href="https://github.com/nitin-jain3"><span>NITIN JAIN</span></a>
-
+<a class="box-item" href="https://github.com/MasterBrian99"><span>Pasindu P Konghawaththa</span></a>
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
