--- a/Contributors.html
+++ b/Contributors.html
@@ -115,6 +115,7 @@
 <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
 <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
 <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
+<a class="box-item" href="https://github.com/dwiguna81"><span>Dwi Guna</span></a>
 <a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
 <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
 <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
