--- a/Contributors.html
+++ b/Contributors.html
@@ -142,6 +142,7 @@
 <a class="box-item" href="https://github.com/savarbhasin>"><span>Savar Bhasin</span></a>
 <a class="box-item" href="https://github.com/nitin-jain3"><span>NITIN JAIN</span></a>
 <a class="box-item" href="https://github.com/MasterBrian99"><span>Pasindu P Konghawaththa</span></a>
+<a class="box-item" href="https://github.com/pepeyen"><span>Erick Frederick</span></a>
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
