Updated few typos at some gh profiles links & changed past user gh profile link

--- a/Contributors.html
+++ b/Contributors.html
@@ -119,7 +119,7 @@
 <a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
 <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
 <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
-<a class="box-item" href="https://github.com/rishurajcambrdg"><span>Rishu Raj</span></a>
+<a class="box-item" href="https://github.com/vakilsahabh"><span>Vakeel Sahabh</span></a>
 <a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a> 
 <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>             
 <a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a> 
@@ -137,9 +137,9 @@
 <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
 <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
 <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
-<a class="box-item" href="https://github.com/<Sauvic016>"><span>Sauvic P Choudhury </span></a>
-<a class="box-item" href="https://github.com/<panchadeep>"><span>Panchadeep Mazumder</span></a>
-<a class="box-item" href="https://github.com/savarbhasin>"><span>Savar Bhasin</span></a>
+<a class="box-item" href="https://github.com/Sauvic016"><span>Sauvic P Choudhury </span></a>
+<a class="box-item" href="https://github.com/panchadeep"><span>Panchadeep Mazumder</span></a>
+<a class="box-item" href="https://github.com/savarbhasin"><span>Savar Bhasin</span></a>
 <a class="box-item" href="https://github.com/nitin-jain3"><span>NITIN JAIN</span></a>
 <a class="box-item" href="https://github.com/MasterBrian99"><span>Pasindu P Konghawaththa</span></a>
 <a class="box-item" href="https://github.com/pepeyen"><span>Erick Frederick</span></a>
