--- a/Contributors.html
+++ b/Contributors.html
@@ -137,6 +137,7 @@
 <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
 <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
 <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
+<a class="box-item" href="https://github.com/naman74"><span>Naman</span></a>	      
 <a class="box-item" href="https://github.com/Sauvic016"><span>Sauvic P Choudhury </span></a>
 <a class="box-item" href="https://github.com/panchadeep"><span>Panchadeep Mazumder</span></a>
 <a class="box-item" href="https://github.com/savarbhasin"><span>Savar Bhasin</span></a>
