--- a/Contributors.html
+++ b/Contributors.html
@@ -144,7 +144,8 @@
 <a class="box-item" href="https://github.com/nitin-jain3"><span>NITIN JAIN</span></a>
 <a class="box-item" href="https://github.com/MasterBrian99"><span>Pasindu P Konghawaththa</span></a>
 <a class="box-item" href="https://github.com/pepeyen"><span>Erick Frederick</span></a>
-<a class="box-item" href="https://github.com/prkhrv"><span>Prakhar Varshney</span></a>	      
+<a class="box-item" href="https://github.com/prkhrv"><span>Prakhar Varshney</span></a>	<a class="box-item" href="https://github.com/aman339"><span>Aman Kumar Choudhary</span></a>    
+
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
