--- a/Contributors.html
+++ b/Contributors.html
@@ -145,6 +145,7 @@
 <a class="box-item" href="https://github.com/MasterBrian99"><span>Pasindu P Konghawaththa</span></a>
 <a class="box-item" href="https://github.com/pepeyen"><span>Erick Frederick</span></a>
 <a class="box-item" href="https://github.com/prkhrv"><span>Prakhar Varshney</span></a>	<a class="box-item" href="https://github.com/aman339"><span>Aman Kumar Choudhary</span></a>    
+<a class="box-item" href="https://github.com/zealptl"><span>Zeal Patel</span></a>
 
 <!--
         Add here
