Fixed adding myself in contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -148,6 +148,7 @@
 <a class="box-item" href="https://github.com/zealptl"><span>Zeal Patel</span></a>
 <a class="box-item" href="https://github.com/aman339"><span>Aman Kumar Choudhary</span></a>
 <a class="box-item" href="https://github.com/DataCrusade1999"><span>Ashutosh Pandey</span></a>    
+<a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a> 
 
 
 <!--
