--- a/Contributors.html
+++ b/Contributors.html
@@ -149,7 +149,7 @@
 <a class="box-item" href="https://github.com/aman339"><span>Aman Kumar Choudhary</span></a>
 <a class="box-item" href="https://github.com/DataCrusade1999"><span>Ashutosh Pandey</span></a>    
 <a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a> 
-
+<a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a> 
 
 <!--
         Add here
