--- a/Contributors.html
+++ b/Contributors.html
@@ -150,6 +150,8 @@
 <a class="box-item" href="https://github.com/DataCrusade1999"><span>Ashutosh Pandey</span></a>    
 <a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a> 
 <a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a> 
+<a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a> 
+
 
 <!--
         Add here
