--- a/Contributors.html
+++ b/Contributors.html
@@ -151,6 +151,7 @@
 <a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a> 
 <a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a> 
 <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a> 
+<a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a> 
 
 
 <!--
