added awesome guy

--- a/Contributors.html
+++ b/Contributors.html
@@ -152,6 +152,7 @@
 <a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a> 
 <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a> 
 <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a> 
+<a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a> 
 
 
 <!--
