--- a/Contributors.html
+++ b/Contributors.html
@@ -152,7 +152,8 @@
 <a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a> 
 <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a> 
 <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a> 
-<a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a> 
+<a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a>
+<a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a> 
 
 
 <!--
