--- a/Contributors.html
+++ b/Contributors.html
@@ -154,6 +154,7 @@
 <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a> 
 <a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a>
 <a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a> 
+<a class="box-item" href="https://github.com/satyampgt4"><span>Satyam</span></a> 
 
 
 <!--
