--- a/Contributors.html
+++ b/Contributors.html
@@ -101,8 +101,6 @@
 
 
 
-
-
 	      <!-- Add to the bottom of the list -->
 <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
 <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
@@ -154,6 +152,7 @@
 <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a> 
 <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a> 
 <a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a>
+<a class="box-item" href="https://github.com/Alok-873"><span>Alok Tripathi</span></a>
 <a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a> 
 <a class="box-item" href="https://github.com/vikramadityasinghs"><span>Vikramaditya Singh Saxena</span></a> 
 
