--- a/Contributors.html
+++ b/Contributors.html
@@ -156,6 +156,7 @@
 <a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a> 
 <a class="box-item" href="https://github.com/satyampgt4"><span>Satyam</span></a> 
 <a class="box-item" href="https://github.com/vikramadityasinghs"><span>Vikramaditya Singh Saxena</span></a> 
+<a class="box-item" href="https://github.com/Aashu23"><span>Aashu</span></a>
 
 
 <!--
