--- a/Contributors.html
+++ b/Contributors.html
@@ -159,6 +159,7 @@
 <a class="box-item" href="https://github.com/Aashu23"><span>Aashu</span></a>
 <a class="box-item" href="https://github.com/Meghna2080"><span>Meghna Singh</span></a>
 <a class="box-item" href="https://github.com/jkunal14"><span>Kunal Jindal</span></a>
+<a class="box-item" href="https://github.com/paarth17032000"><span>Paarth Agarwal</span></a>
 
 
 <!--
