--- a/Contributors.html
+++ b/Contributors.html
@@ -160,6 +160,7 @@
 <a class="box-item" href="https://github.com/Meghna2080"><span>Meghna Singh</span></a>
 <a class="box-item" href="https://github.com/jkunal14"><span>Kunal Jindal</span></a>
 <a class="box-item" href="https://github.com/andreanz22"><span>Andrean Novan</span></a>
+<a class="box-item" href="https://github.com/juanpablohuertas"><span>Juan Pablo Huertas</span></a>
 
 
 <!--
