--- a/Contributors.html
+++ b/Contributors.html
@@ -161,6 +161,7 @@
 <a class="box-item" href="https://github.com/jkunal14"><span>Kunal Jindal</span></a>
 <a class="box-item" href="https://github.com/andreanz22"><span>Andrean Novan</span></a>
 <a class="box-item" href="https://github.com/juanpablohuertas"><span>Juan Pablo Huertas</span></a>
+<a class="box-item" href="https://github.com/JimBowler82"><span>Jim Bowler</span></a>
 
 
 <!--
