--- a/Contributors.html
+++ b/Contributors.html
@@ -165,6 +165,7 @@
 <a class="box-item" href="https://github.com/JimBowler82"><span>Jim Bowler</span></a>
 <a class="box-item" href="https://github.com/jhonatanoc96"><span>Jhonatan Ocampo</span></a>
 <a class="box-item" href="https://github.com/naman360"><span>Naman Shankhydhar</span></a>
+<a class="box-item" href="https://github.com/SidathWeerasinghe"><span>Sidath Weerasinghe</span></a>
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
