changed colour of head text and added name

--- a/Contributors.html
+++ b/Contributors.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <style>
+    .container{
+      color: #229383;
+    }
+  </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <link rel = "icon" href ="https://hacktoberfestswaglist.com/img/Hacktoberfest_20.jpg" type = "image/x-icon">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74296045-6"></script>
@@ -166,6 +171,8 @@
 <a class="box-item" href="https://github.com/jhonatanoc96"><span>Jhonatan Ocampo</span></a>
 <a class="box-item" href="https://github.com/naman360"><span>Naman Shankhydhar</span></a>
 <a class="box-item" href="https://github.com/SidathWeerasinghe"><span>Sidath Weerasinghe</span></a>
+<a class="box-item" href="https://github.com/samikshaupadhyay/"><span>Samiksha Upadhyay</span></a>
+
 <!--
         Add here
         format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
