--- a/Contributors.html
+++ b/Contributors.html
@@ -172,6 +172,7 @@
 <a class="box-item" href="https://github.com/naman360"><span>Naman Shankhydhar</span></a>
 <a class="box-item" href="https://github.com/SidathWeerasinghe"><span>Sidath Weerasinghe</span></a>
 <a class="box-item" href="https://github.com/samikshaupadhyay/"><span>Samiksha Upadhyay</span></a>
+<a class="box-item" href="https://github.com/Ze-Falcon"><span>Ze Falcon</span></a>	      
 
 <!--
         Add here
