--- a/Contributors.html
+++ b/Contributors.html
@@ -173,7 +173,9 @@
 <a class="box-item" href="https://github.com/SidathWeerasinghe"><span>Sidath Weerasinghe</span></a>
 <a class="box-item" href="https://github.com/samikshaupadhyay/"><span>Samiksha Upadhyay</span></a>
 <a class="box-item" href="https://github.com/Ze-Falcon"><span>Ze Falcon</span></a>	      
-<a class="box-item" href="https://github.com/nguyenlamspk"><span>Lam Nguyen</span></a>	      
+<a class="box-item" href="https://github.com/nguyenlamspk"><span>Lam Nguyen</span></a>
+<a class="box-item" href="https://github.com/yagamipal"><span>Yagami</span></a>	      
+	      
 
 <!--
         Add here
