Modify contributors list
Adding my name to the contributors list

--- a/Contributors.html
+++ b/Contributors.html
@@ -174,7 +174,8 @@
 <a class="box-item" href="https://github.com/samikshaupadhyay/"><span>Samiksha Upadhyay</span></a>
 <a class="box-item" href="https://github.com/Ze-Falcon"><span>Ze Falcon</span></a>	      
 <a class="box-item" href="https://github.com/nguyenlamspk"><span>Lam Nguyen</span></a>
-<a class="box-item" href="https://github.com/yagamipal"><span>Yagami</span></a>	      
+<a class="box-item" href="https://github.com/yagamipal"><span>Yagami</span></a>
+<a class="box-item" href="https://github.com/ameygangwal"><span>Amey</span></a>	      
 	      
 
 <!--
