Add my card to contributors list

--- a/Contributors.html
+++ b/Contributors.html
@@ -120,13 +120,13 @@
 <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
 <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
 <a class="box-item" href="https://github.com/dwiguna81"><span>Dwi Guna</span></a>
-<a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>	      	
+<a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>
 <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
 <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
 <a class="box-item" href="https://github.com/vakilsahabh"><span>Vakeel Sahabh</span></a>
-<a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a> 
-<a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>             
-<a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a> 
+<a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a>
+<a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>
+<a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a>
 <a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
 <a class="box-item" href="https://github.com/ShagiG"><span>ShagiGanesh</span></a>
 <a class="box-item" href="https://github.com/hidalgob"><span>Bruno Hidalgo</span></a>
@@ -141,7 +141,7 @@
 <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
 <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
 <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
-<a class="box-item" href="https://github.com/naman74"><span>Naman</span></a>	      
+<a class="box-item" href="https://github.com/naman74"><span>Naman</span></a>
 <a class="box-item" href="https://github.com/Sauvic016"><span>Sauvic P Choudhury </span></a>
 <a class="box-item" href="https://github.com/panchadeep"><span>Panchadeep Mazumder</span></a>
 <a class="box-item" href="https://github.com/savarbhasin"><span>Savar Bhasin</span></a>
@@ -151,16 +151,16 @@
 <a class="box-item" href="https://github.com/prkhrv"><span>Prakhar Varshney</span></a>
 <a class="box-item" href="https://github.com/zealptl"><span>Zeal Patel</span></a>
 <a class="box-item" href="https://github.com/aman339"><span>Aman Kumar Choudhary</span></a>
-<a class="box-item" href="https://github.com/DataCrusade1999"><span>Ashutosh Pandey</span></a>    
-<a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a> 
-<a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a> 
-<a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a> 
-<a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a> 
+<a class="box-item" href="https://github.com/DataCrusade1999"><span>Ashutosh Pandey</span></a>
+<a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a>
+<a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a>
+<a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a>
+<a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a>
 <a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a>
 <a class="box-item" href="https://github.com/Alok-873"><span>Alok Tripathi</span></a>
-<a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a> 
-<a class="box-item" href="https://github.com/satyampgt4"><span>Satyam</span></a> 
-<a class="box-item" href="https://github.com/vikramadityasinghs"><span>Vikramaditya Singh Saxena</span></a> 
+<a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a>
+<a class="box-item" href="https://github.com/satyampgt4"><span>Satyam</span></a>
+<a class="box-item" href="https://github.com/vikramadityasinghs"><span>Vikramaditya Singh Saxena</span></a>
 <a class="box-item" href="https://github.com/Aashu23"><span>Aashu</span></a>
 <a class="box-item" href="https://github.com/Meghna2080"><span>Meghna Singh</span></a>
 <a class="box-item" href="https://github.com/jkunal14"><span>Kunal Jindal</span></a>
@@ -172,11 +172,11 @@
 <a class="box-item" href="https://github.com/naman360"><span>Naman Shankhydhar</span></a>
 <a class="box-item" href="https://github.com/SidathWeerasinghe"><span>Sidath Weerasinghe</span></a>
 <a class="box-item" href="https://github.com/samikshaupadhyay/"><span>Samiksha Upadhyay</span></a>
-<a class="box-item" href="https://github.com/Ze-Falcon"><span>Ze Falcon</span></a>	      
+<a class="box-item" href="https://github.com/Ze-Falcon"><span>Ze Falcon</span></a>
 <a class="box-item" href="https://github.com/nguyenlamspk"><span>Lam Nguyen</span></a>
 <a class="box-item" href="https://github.com/yagamipal"><span>Yagami</span></a>
-<a class="box-item" href="https://github.com/ameygangwal"><span>Amey</span></a>	      
-	      
+<a class="box-item" href="https://github.com/ameygangwal"><span>Amey</span></a>
+<a class="box-item" href="https://github.com/JoaoJesus94"><span>João Jesus</span></a>
 
 <!--
         Add here
