--- a/Contributors.html
+++ b/Contributors.html
@@ -177,6 +177,7 @@
 <a class="box-item" href="https://github.com/yagamipal"><span>Yagami</span></a>
 <a class="box-item" href="https://github.com/ameygangwal"><span>Amey</span></a>
 <a class="box-item" href="https://github.com/JoaoJesus94"><span>João Jesus</span></a>
+<a class="box-item" href="https://github.com/alvalle09"><span>Alfredo Valle</span></a>
 
 <!--
         Add here
