added MergeSort on Python

--- a/Contributors.html
+++ b/Contributors.html
@@ -178,6 +178,7 @@
 <a class="box-item" href="https://github.com/ameygangwal"><span>Amey</span></a>
 <a class="box-item" href="https://github.com/JoaoJesus94"><span>João Jesus</span></a>
 <a class="box-item" href="https://github.com/alvalle09"><span>Alfredo Valle</span></a>
+<a class="box-item" href="https://github.com/achudinovskyh"><span>Andrew Chudinovskyh</span></a>
 
 <!--
         Add here
