Added name to contributors

--- a/Contributors.html
+++ b/Contributors.html
@@ -180,6 +180,7 @@
 <a class="box-item" href="https://github.com/alvalle09"><span>Alfredo Valle</span></a>
 <a class="box-item" href="https://github.com/achudinovskyh"><span>Andrew Chudinovskyh</span></a>
 <a class="box-item" href="https://github.com/ydegtyar"><span>Yuriy Degtyar</span></a>
+<a class="box-item" href="https://github.com/drashevsky"><span>Daniel Rashevsky</span></a>
 
 
 <!--
