--- a/Contributors.html
+++ b/Contributors.html
@@ -181,12 +181,8 @@
 <a class="box-item" href="https://github.com/achudinovskyh"><span>Andrew Chudinovskyh</span></a>
 <a class="box-item" href="https://github.com/ydegtyar"><span>Yuriy Degtyar</span></a>
 <a class="box-item" href="https://github.com/drashevsky"><span>Daniel Rashevsky</span></a>
+<a class="box-item" href="https://github.com/sabry2020"><span>Sabry</span></a>
 
-
-<!--
-        Add here
-        format : <a class="box-item" href="https://github.com/<your-username>"><span>Your Name</span></a>
--->
 
       </div>
     </div>
