--- a/Contributors.html
+++ b/Contributors.html
@@ -182,6 +182,7 @@
 <a class="box-item" href="https://github.com/ydegtyar"><span>Yuriy Degtyar</span></a>
 <a class="box-item" href="https://github.com/drashevsky"><span>Daniel Rashevsky</span></a>
 <a class="box-item" href="https://github.com/sabry2020"><span>Sabry</span></a>
+<a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>	
 
 
       </div>
