--- a/Contributors.html
+++ b/Contributors.html
@@ -183,7 +183,7 @@
 <a class="box-item" href="https://github.com/drashevsky"><span>Daniel Rashevsky</span></a>
 <a class="box-item" href="https://github.com/sabry2020"><span>Sabry</span></a>
 <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>	
-
+<a class="box-item" href="https://github.com/soham117"><span>Soham Purohit</span></a>
 
       </div>
     </div>
