--- a/Contributors.html
+++ b/Contributors.html
@@ -184,6 +184,7 @@
 <a class="box-item" href="https://github.com/sabry2020"><span>Sabry</span></a>
 <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>	
 <a class="box-item" href="https://github.com/soham117"><span>Soham Purohit</span></a>
+<a class="box-item" href="https://github.com/Prasad-Chathuranga"><span>Prasad Chathuranga</span></a>
 
       </div>
     </div>
