--- a/Contributors.html
+++ b/Contributors.html
@@ -182,7 +182,9 @@
 <a class="box-item" href="https://github.com/ydegtyar"><span>Yuriy Degtyar</span></a>
 <a class="box-item" href="https://github.com/drashevsky"><span>Daniel Rashevsky</span></a>
 <a class="box-item" href="https://github.com/sabry2020"><span>Sabry</span></a>
-<a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
+<a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>	
+<a class="box-item" href="https://github.com/soham117"><span>Soham Purohit</span></a>
+<a class="box-item" href="https://github.com/Prasad-Chathuranga"><span>Prasad Chathuranga</span></a>
 
 
       </div>
