--- a/Contributors.html
+++ b/Contributors.html
@@ -188,6 +188,7 @@
 <a class="box-item" href="https://github.com/Prasad-Chathuranga"><span>Prasad Chathuranga</span></a>
 <a class="box-item" href="https://github.com/vngarg"><span>Shlok Garg</span></a>
 <a class="box-item" href="https://github.com/siddharthdeo99"><span>Siddharth deo</span></a>
+<a class="box-item" href="https://github.com/Aniket6039"><span>Aniket Raj</span></a>
 <a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
 	      
       </div>
