--- a/Contributors.html
+++ b/Contributors.html
@@ -190,6 +190,8 @@
 <a class="box-item" href="https://github.com/siddharthdeo99"><span>Siddharth deo</span></a>
 <a class="box-item" href="https://github.com/Aniket6039"><span>Aniket Raj</span></a>
 <a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
+<a class="box-item" href="https://github.com/abhijeetaman007"><span>Abhijeet Sinha</span></a>
+
 	      
       </div>
     </div>
