--- a/Contributors.html
+++ b/Contributors.html
@@ -189,6 +189,7 @@
 <a class="box-item" href="https://github.com/vngarg"><span>Shlok Garg</span></a>
 
 <a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
+	      <a class="box-item" href="https://github.com/SDGraph"><span>SD Graph</span></a>
       </div>
     </div>
 </div>
