--- a/Contributors.html
+++ b/Contributors.html
@@ -191,6 +191,7 @@
 <a class="box-item" href="https://github.com/Aniket6039"><span>Aniket Raj</span></a>
 <a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
 <a class="box-item" href="https://github.com/abhijeetaman007"><span>Abhijeet Sinha</span></a>
+<a class="box-item" href="https://github.com/tuminzee"><span>Tumin Sheth</span></a>
 
 	      
       </div>
