--- a/Contributors.html
+++ b/Contributors.html
@@ -118,6 +118,7 @@
 <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
 <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
 <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
+<a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agarwal</span></a>
 <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
 <a class="box-item" href="https://github.com/dwiguna81"><span>Dwi Guna</span></a>
 <a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>
