--- a/Contributors.html
+++ b/Contributors.html
@@ -191,10 +191,11 @@
 <a class="box-item" href="https://github.com/Aniket6039"><span>Aniket Raj</span></a>
 <a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
 <a class="box-item" href="https://github.com/abhijeetaman007"><span>Abhijeet Sinha</span></a>
+<a class="box-item" href="https://github.com/Shikhar253"><span>Shikhar Saxena</span></a>
+<a class="box-item" href="https://github.com/rasyidzkun"><span>Ar Rasyid Sarifullah</span></a>
+<a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
+	      
 
-        <a class="box-item" href="https://github.com/Shikhar253"><span>Shikhar Saxena</span></a>
-        <a class="box-item" href="https://github.com/rasyidzkun"><span>Ar Rasyid Sarifullah</span></a>
-<a class="box-item" href="https://github.com/RheaAdh"><span>Rhea Adhikari</span></a>
 
 	      
       </div>
