--- a/Contributors.html
+++ b/Contributors.html
@@ -195,7 +195,7 @@
         <a class="box-item" href="https://github.com/Shikhar253"><span>Shikhar Saxena</span></a>
         <a class="box-item" href="https://github.com/rasyidzkun"><span>Ar Rasyid Sarifullah</span></a>
 <a class="box-item" href="https://github.com/RheaAdh"><span>Rhea Adhikari</span></a>
-
+<a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>	
 	      
       </div>
     </div>
