--- a/Contributors.html
+++ b/Contributors.html
@@ -199,6 +199,7 @@
       <a class="box-item" href="https://github.com/abhijeetaman007"><span>Abhijeet Sinha</span></a>
       <a class="box-item" href="https://github.com/keerays"><span>Keerays</span></a>
 	       <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agrawal</span></a>
+	       <a class="box-item" href="https://github.com/Red-0111"><span>Rudransh</span></a>
 
 
       </div>
