--- a/Contributors.html
+++ b/Contributors.html
@@ -205,6 +205,8 @@
       <a class="box-item" href="https://github.com/dhruvil-shah"><span>Dhruvil Shah</span></a>
       <a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
       <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
+<a class="box-item" href="https://github.com/dynle"><span>Dyn Lee</span></a>
+
 
 
       </div>
