--- a/Contributors.html
+++ b/Contributors.html
@@ -208,8 +208,9 @@
         <a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
         <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
         <a class="box-item" href="https://github.com/achromik"><span>Aleksander Chromik</span></a>
-      <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
-      <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
+        <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
+        <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
+        <a class="box-item" href="https://github.com/Lukman350"><span>Lukman</span></a>
 
 
 
