Added fizbuzz program and updated contributor list

--- a/Contributors.html
+++ b/Contributors.html
@@ -214,7 +214,8 @@
         <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
         <a class="box-item" href="https://github.com/achromik"><span>Aleksander Chromik</span></a>
       <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
-      <a class="box-item" href="https://github.com/dynle"><span>Dynle</span><
+      <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
+        <a class="box-item" href="https://github.com/Krutarth06"><span>Krutarth Trivedi</span></a>
 
 
       </div>
