--- a/Contributors.html
+++ b/Contributors.html
@@ -221,6 +221,7 @@
         <a class="box-item" href="https://github.com/Krutarth06"><span>Krutarth Trivedi</span></a>
       <a class="box-item" href="https://github.com/Lukman350"><span>Lukman</span></a>
 	      <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya </span></a>
+	<a class="box-item" href="https://github.com/adarshraghav"><span>Adarsh Raghav</span></a>
 	<a class="box-item" href="https://github.com/akash-10-23"><span>Akash Ratan Verma</span></a>
 
       </div>
