--- a/Contributors.html
+++ b/Contributors.html
@@ -223,7 +223,7 @@
 	      <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya </span></a>
 	<a class="box-item" href="https://github.com/adarshraghav"><span>Adarsh Raghav</span></a>
 	<a class="box-item" href="https://github.com/akash-10-23"><span>Akash Ratan Verma</span></a>
-
+	<a class="box-item" href="https://github.com/ana2407"><span>Vibhuti Negi</span></a>
       </div>
     </div>
 </div>
