--- a/Contributors.html
+++ b/Contributors.html
@@ -224,6 +224,7 @@
 	<a class="box-item" href="https://github.com/adarshraghav"><span>Adarsh Raghav</span></a>
 	<a class="box-item" href="https://github.com/akash-10-23"><span>Akash Ratan Verma</span></a>
 	<a class="box-item" href="https://github.com/ana2407"><span>Vibhuti Negi</span></a>
+	<a class="box-item" href="https://github.com/ananya2407"><span>Ananya Sajwan</span></a>
       </div>
     </div>
 </div>
