added myself to contributions.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -214,6 +214,7 @@
         <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
         <a class="box-item" href="https://github.com/achromik"><span>Aleksander Chromik</span></a>
       <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
+      <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya Chopra</span></a>
       <a class="box-item" href="https://github.com/dynle"><span>Dynle</span><
 
 
