--- a/Contributors.html
+++ b/Contributors.html
@@ -229,6 +229,7 @@
   <a class="box-item" href="https://github.com/husinassegaff"><span>Husin Muhammad Assegaff</span></a>
 <a class="box-item" href="https://github.com/doniambarita"><span>Doni Ambarita</span></a>
 <a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>  
+	      <a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
 
 
       </div>
